updated index html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
-<html><head><font size=6>Animations referenced in arXiv:XXXX</font></head>
-<p> Compare 1 sigma sample to selected points: <a href=points/animation.html>Point comparison</a></p>
-<p> Compare shell of Hessian 1 sigma region to sample points: <a href=shell/animation.html>Hessian vs sample</a></p>
+<html>
+<html>
+<head>
+<style>
+h1 {
+    color: black;
+    font-family: verdana;
+    font-size: 250%;
+    text-indent: 5%;
+}
+p  {
+    color: red;
+    font-family: courier;
+    font-size: 100%;
+    text-indent: 10%;
+}
+</style>
+</head>
+<body>
+<h1>  Animations referenced in arXiv:XXXX</h1>
+<p>     Animation for Figure 1: <a href=points/animation.html>here</a></p>
+<p>     Animation for Figure 2: <a href=shell/animation.html>here</a></p>
+</body>
 </html>
