arxiv number added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ p  {
 </style>
 </head>
 <body>
-<h1>  Animations referenced in arXiv:XXXX</h1>
+<h1>  Animations referenced in arXiv:1811.10793</h1>
 <p>     Animation for Figure 1: <a href=points/animation.html>here</a></p>
 <p>     Animation for Figure 2: <a href=shell/animation.html>here</a></p>
 </body>
