added pdfsense gif animations

--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@ p  {
 <h1>  Animations referenced in arXiv:1811.10793</h1>
 <p>     Animation for Figure 1: <a href=points/animation.html>here</a></p>
 <p>     Animation for Figure 2: <a href=shell/animation.html>here</a></p>
+
+<h1>  Animations referenced in arXiv:1806.09742</h1>
+<p>     <a href=pdfsense1.html>all</a></p>
+<p>     <a href=pdfsense2.html>jetCluster</a></p>
+
 </body>
 </html>
