updated index html

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@ p  {
 <p>     <a href=pdfsense1.html>all</a></p>
 <p>     <a href=pdfsense2.html>jetCluster</a></p>
 
+<h1>  Animations referenced in XXX</h1>
+<p>     <a href=composits1.html>International Arrivals</a></p>
+
 </body>
 </html>
