Additional animations added.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ p  {
 
 <h1>  Animations referenced in XXX</h1>
 <p>     <a href=composits1.html>International Arrivals</a></p>
+<p>     <a href=composits2.html>COVID-19 in India</a></p>
+<p>     <a href=composits3.html>Spanish Deaths</a></p>
+
 
 </body>
 </html>
