--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p  {
 <p>     <a href=pdfsense1.html>all</a></p>
 <p>     <a href=pdfsense2.html>jetCluster</a></p>
 
-<h1>  Animations referenced in XXX</h1>
+<h1>  Animations referenced in <a href="https://www.researchgate.net/deref/http%3A%2F%2Fdx.doi.org%2F10.13140%2FRG.2.2.32217.95845">DOI: 10.13140/RG.2.2.32217.95845</a> </h1>
 <p>     <a href=composits1.html>International Arrivals</a></p>
 <p>     <a href=composits2.html>COVID-19 in India</a></p>
 <p>     <a href=composits3.html>Spanish Deaths</a></p>
