--- a/index.html
+++ b/index.html
@@ -32,5 +32,11 @@ p  {
 <p>     <a href=composits3.html>Spanish Deaths</a></p>
 
 
+<h1>  Animations from pandemonium</h1>
+<p>     <a href=pandemonium1.html> Ex 1</a></p>
+<p>     <a href=pandemonium2.html> Ex 2</a></p>
+<p>     <a href=pandemonium3.html> Ex 3</a></p>
+<p>     <a href=pandemonium4.html> Ex 4</a></p>
+
 </body>
 </html>
